P154: Can't remove the copyright statement to get under page limit

--- a/papers/154/source/ccscse25_154.tex
+++ b/papers/154/source/ccscse25_154.tex
@@ -4,7 +4,10 @@
 
 \addbibresource{sample.bib}
 
-\title{Bridging Traditional Machine Learning and Large Language Models: A Two-Part Course Design for Modern AI Education}
+\title{Bridging Traditional Machine Learning and Large Language Models:
+  A Two-Part Course Design for Modern AI
+  Education\footnote{\protect\input{copyright}}
+}
 
 \author{
   Fang Li\\
@@ -18,18 +21,59 @@
 \maketitle
 
 \begin{abstract}
-This paper presents an innovative pedagogical approach for teaching artificial intelligence and data science that systematically bridges traditional machine learning techniques with modern Large Language Models (LLMs). We describe a course structured in two sequential and complementary parts: foundational machine learning concepts and contemporary LLM applications. This design enables students to develop a comprehensive understanding of AI evolution while building practical skills with both established and cutting-edge technologies. We detail the course architecture, implementation strategies, assessment methods, and learning outcomes from our summer course delivery spanning two seven-week terms. Our findings demonstrate that this integrated approach enhances student comprehension of the AI landscape and better prepares them for industry demands in the rapidly evolving field of artificial intelligence.
+  This paper presents an innovative pedagogical approach for teaching
+  artificial intelligence and data science that systematically bridges
+  traditional machine learning techniques with modern Large Language
+  Models (LLMs). We describe a course structured in two sequential and
+  complementary parts: foundational machine learning concepts and
+  contemporary LLM applications. This design enables students to develop
+  a comprehensive understanding of AI evolution while building practical
+  skills with both established and cutting-edge technologies. We detail
+  the course architecture, implementation strategies, assessment
+  methods, and learning outcomes from our summer course delivery
+  spanning two seven-week terms. Our findings demonstrate that this
+  integrated approach enhances student comprehension of the AI landscape
+  and better prepares them for industry demands in the rapidly evolving
+  field of artificial intelligence.
 \end{abstract}
 
 \section{Introduction}
 
-The artificial intelligence landscape has undergone unprecedented transformation with the emergence of Large Language Models (LLMs). While foundational machine learning techniques remain essential, the capabilities demonstrated by models such as GPT \cite{brown2020language}, LLaMA \cite{touvron2023llama}, and Claude \cite{anthropic2023claude} have fundamentally altered how AI systems are conceptualized, developed, and deployed. This paradigm shift presents a critical pedagogical challenge: how can educators effectively integrate established machine learning fundamentals with contemporary LLM technologies within a coherent curriculum framework?
+The artificial intelligence landscape has undergone unprecedented
+transformation with the emergence of Large Language Models (LLMs). While
+foundational machine learning techniques remain essential, the
+capabilities demonstrated by models such as GPT
+\cite{brown2020language}, LLaMA \cite{touvron2023llama}, and Claude
+\cite{anthropic2023claude} have fundamentally altered how AI systems are
+conceptualized, developed, and deployed. This paradigm shift presents a
+critical pedagogical challenge: how can educators effectively integrate
+established machine learning fundamentals with contemporary LLM
+technologies within a coherent curriculum framework?
 
-Existing AI and data science courses typically adopt one of two approaches: those emphasizing classical statistical methods and traditional ML algorithms, or those focusing on neural networks and deep learning architectures. However, few successfully bridge these foundational approaches with modern LLM paradigms. This pedagogical gap can result in graduates who either possess strong theoretical foundations but lack practical experience with current tools, or who demonstrate familiarity with cutting-edge models but have gaps in fundamental understanding of underlying principles.
+Existing AI and data science courses typically adopt one of two
+approaches: those emphasizing classical statistical methods and
+traditional ML algorithms, or those focusing on neural networks and deep
+learning architectures. However, few successfully bridge these
+foundational approaches with modern LLM paradigms. This pedagogical gap
+can result in graduates who either possess strong theoretical
+foundations but lack practical experience with current tools, or who
+demonstrate familiarity with cutting-edge models but have gaps in
+fundamental understanding of underlying principles.
 
-To address this educational challenge, we developed a comprehensive course structured as two sequential yet interconnected components: (1) pre-LLM foundations encompassing traditional machine learning and data science concepts, and (2) LLM applications and development covering contemporary AI technologies. This paper describes our pedagogical approach, implementation methodology, assessment strategies, and preliminary outcomes from delivering this curriculum as an intensive summer course spanning two seven-week terms.
+To address this educational challenge, we developed a comprehensive
+course structured as two sequential yet interconnected components: (1)
+pre-LLM foundations encompassing traditional machine learning and data
+science concepts, and (2) LLM applications and development covering
+contemporary AI technologies. This paper describes our pedagogical
+approach, implementation methodology, assessment strategies, and
+preliminary outcomes from delivering this curriculum as an intensive
+summer course spanning two seven-week terms.
 
-Our primary contributions include the development of a systematic framework for integrating traditional ML with LLM education, the creation of accessible implementation strategies using cloud-based platforms, and the demonstration of enhanced learning outcomes through this bridging approach.
+Our primary contributions include the development of a systematic
+framework for integrating traditional ML with LLM education, the
+creation of accessible implementation strategies using cloud-based
+platforms, and the demonstration of enhanced learning outcomes through
+this bridging approach.
 
 \section{Related Work}
 
