P148: extraneous footnote mark removed

--- a/papers/148/source/ccscse25_148.tex
+++ b/papers/148/source/ccscse25_148.tex
@@ -124,7 +124,7 @@ We collected Anonymous survey data at the end of each semester. Survey data anal
 
 \begin{table}[htbp]
 \centering
-\caption{Survey Results by Year\footnotemark}
+\caption{Survey Results by Year}
 \label{table:survey_summary}
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{lccccc}
