P109: Cite with URL field containing % symbol. Oops

--- a/papers/109/source/AI-ref.bib
+++ b/papers/109/source/AI-ref.bib
@@ -20,7 +20,7 @@
   year         = {2024},
   institution  = {Venkateshwar Global School},
   note         = {Accessed May 2025},
-  url          = {https://ijhssm.org/issue_dcp/The%20Impact%20of%20AI%20Writing%20Tools%20on%20the%20Content%20and%20Organization%20of%20Students%20Writing.pdf}
+  url          = \url{https://ijhssm.org/issue_dcp/The%20Impact%20of%20AI%20Writing%20Tools%20on%20the%20Content%20and%20Organization%20of%20Students%20Writing.pdf}}
 }
 
 @article{zawacki2019systematic,
