--- a/papers/109/source/ccscse25_109.tex
+++ b/papers/109/source/ccscse25_109.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 
 \input{preamble}
+\usepackage{url}
 
 % Title and Author
 \title{Embracing the Ethical Use of Artificial Intelligence to Enhance Writing Skills and Comprehension\footnote{\protect\input{copyright}}}
