P166: More rectification editing. There's always one

--- a/papers/166/source/ccscse25_166.bib
+++ b/papers/166/source/ccscse25_166.bib
@@ -67,8 +67,8 @@
 	year = {2021}}
 
 @inproceedings{asee_peer_54160,
+	author = {Nilanjana Raychawdhary, Chaohui Ren, Cheryl Seals and Sutanu Bhattacharya},
 	address = {Mississippi State University, Mississippi},
-	author = {Nilanjana Raychawdhary, Chaohui Ren, Cheryl Seals, and Sutanu Bhattacharya},
 	booktitle = {2025 ASEE Southeast Conference},
 	month = {March},
 	note = {https://peer.asee.org/54160},
@@ -225,3 +225,26 @@
 	title = {Introduction to machine learning with Python: a guide for data scientists},
 	year = {2016}}
 
+@inproceedings{hughes-etal-2023-bhattacharya,
+    title = "{B}hattacharya{\_}{L}ab at {S}em{E}val-2023 Task 12: A Transformer-based Language Model for Sentiment Classification for Low Resource {A}frican Languages: {N}igerian {P}idgin and {Y}oruba",
+    author = "Hughes, Nathaniel  and
+      Baker, Kevan  and
+      Singh, Aditya  and
+      Singh, Aryavardhan  and
+      Dauda, Tharalillah  and
+      Bhattacharya, Sutanu",
+    booktitle = "Proceedings of the The 17th International Workshop on Semantic Evaluation (SemEval-2023)",
+    month = jul,
+    year = "2023",
+    address = "Toronto, Canada",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.semeval-1.207",
+    pages = "1502--1507",
+}
+
+@inproceedings{raychawdhary2025empowering,
+  title={Empowering Undergraduates with NLP: Integrative Methods for Deepening Understanding through Visualization and Case Studies},
+  author={Raychawdhary, Nilanjana and Ren, Chaohui and Seals, Cheryl and Bhattacharya, Sutanu},
+  booktitle={2025 ASEE Southeast Conference},
+  year={2025}
+}
