P166: update from author

--- a/papers/166/source/main.tex
+++ b/papers/166/source/main.tex
@@ -9,7 +9,7 @@
 
 \input{preamble}
 
-\addbibresource{ccscse25_166.bib}
+\addbibresource{sample.bib}
 
 \title{Teaching NLP and Machine Learning Through Case Studies Using Interactive Environments\footnote{\protect\input{copyright}}
 }
