P166: very minor formatting changes to get things ready for production.

--- a/papers/166/source/ccscse25_166.bib
+++ b/papers/166/source/ccscse25_166.bib
@@ -248,3 +248,12 @@
   booktitle={2025 ASEE Southeast Conference},
   year={2025}
 }
+
+@article{raychawdhary2025asee,
+  author  = "Raychawdhary, Nilanjana and Ren, Chaohui and Seals, Cheryl and Bhattacharya, Sutanu",
+  title   = "{Empowering Undergraduates with NLP: Integrative Methods for Deepening Understanding through Visualization and Case Studies}",
+  journal = "2025 ASEE Southeast Conference",
+  year    = "2025",
+  url     = "https://peer.asee.org/54160",
+  note    = "DOI: 10.18260/1-2--54160"
+}
