P109: correct reference in bib

--- a/papers/109/source/ccscse25_109.tex
+++ b/papers/109/source/ccscse25_109.tex
@@ -72,7 +72,7 @@ After submitting the final analysis, students completed a 13-question anonymous 
 
 \textbf{AI Impact on Efficiency.} The second research question explored whether AI improved efficiency in completing chapter analyses. Across both semesters, 47\% of students reported significantly less time spent, and 41\% reported less time overall. Only 12\% saw no improvement or increased time. Thus, nearly 88\% experienced greater efficiency, confirming AI’s value as a productivity aid, with minor delays linked to tool familiarity or content revision.
 
-\textbf{AI Tools Used for Grammar Improvement and Text Generation} Research Questions 3 and 6 examined which AI tools students used to either improve grammar or generate content in their chapter analyses. Figure~\ref{paper_template/Figures/fig:ai_tool_usage} compares the top tools used across both purposes, based on combined data from Fall 2024 and Spring 2025.
+\textbf{AI Tools Used for Grammar Improvement and Text Generation} Research Questions 3 and 6 examined which AI tools students used to either improve grammar or generate content in their chapter analyses. Figure~\ref{fig:ai_tool_usage} compares the top tools used across both purposes, based on combined data from Fall 2024 and Spring 2025.
 
 This comparison reveals that while students often use the same tools for multiple functions, their frequency of use differs significantly depending on task. ChatGPT dominates in text generation, while Grammarly holds stronger for grammar refinement. The diversity of additional tools—including \textit{Perplexity}, \textit{Claude}, \textit{META}, and \textit{PowerPoint Summarizer}—suggests students are experimenting with different platforms to find the most suitable support for their writing needs.
 
@@ -80,7 +80,7 @@ This comparison reveals that while students often use the same tools for multipl
     \centering
     \includegraphics[width=0.7\linewidth]{Figures/ai_tool_usage_comparison.png}
     \caption{Comparison of AI Tool Usage for Grammar Improvement vs. Text Generation (Fall 2024 \& Spring 2025 Combined)}
-    \label{Figures/fig:ai_tool_usage}
+    \label{fig:ai_tool_usage}
 \end{figure}
 
 \textbf{Impact of AI on Grammar, Writing Quality, and Topic Comprehension}  
@@ -194,6 +194,6 @@ Over 80\% of students revised or expanded AI-generated content, showing active l
 \medskip
 
 \bibliographystyle{plain}
-\bibliography{AI-ref}
+\bibliography{ccscse25_109}
 
 \end{document}
