P158: Add copyright statement into document

--- a/papers/158/source/ccscse25_158.tex
+++ b/papers/158/source/ccscse25_158.tex
@@ -3,7 +3,7 @@
 \input{preamble}
 \addbibresource{pounds-ccsc25ref.bib}
 
-\title{A Case Study: Using a Conversational LLM to Build a High Performance Physics Engine for Gas Diffusion}
+\title{A Case Study: Using a Conversational LLM to Build a High Performance Physics Engine for Gas Diffusion\footnote{\protect\input{copyright}}}
 \author{Andrew J. Pounds\\
 Departments of Chemistry and Computer Science\\
 Mercer University, Macon, GA, 31207\\
