--- a/tutorial/105/source/ccscse25_105.tex
+++ b/tutorial/105/source/ccscse25_105.tex
@@ -2,7 +2,7 @@
 
 \input{preamble}
 
-\title{Best Practices for Face-to-face and Online Undergraduate Research\\
+\title{Best Practices for Face-to-face and Online Undergraduate Research\footnote{\protect\input{copyleft}}\\
 \vspace{0.2in}
 \large{
 Conference Tutorial
